--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -339,7 +339,7 @@ h4:hover .object-id {
 }
 
 /* Event Editor */
-.events-editor, .quest-editor, .media-editor, .object-editor {
+.events-editor, .quest-editor, .media-editor, .object-editor, .games-list-container {
 	.padded, .event-table-header div, .event-table-header label {
 		padding-right: 15px;
 		padding-left: 15px;
