--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -192,7 +192,8 @@ h4:hover .object-id {
 .trigger-types input,
 .item-types input,
 .trigger-trigger_on_enter input,
-.factory-trigger_on_enter input {
+.factory-trigger_on_enter input,
+.published-toggle input {
   display: none;
 }
 /* QR code fit to side editor */
@@ -384,4 +385,24 @@ h4:hover .object-id {
   position: absolute;
   left: 50%;
   z-index: 9000;
+}
+/* Game Editor */
+/* Panel Toggle markers */
+.panel-heading .panel-title a:after {
+  font-family: 'Glyphicons Halflings';
+  content: "\e114";
+  float: right;
+  color: grey;
+}
+.panel-heading .panel-title.collapsed a:after {
+  content: "\e080";
+}
+.panel-heading a {
+  display: block;
+}
+.published-toggle label {
+  opacity: 0.75;
+}
+.published-toggle label.active {
+  opacity: 1.0;
 }
