List and Delete editors

--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -455,3 +455,15 @@ h4:hover .object-id {
 .published-toggle label.active {
 	opacity: 1.0;
 }
+
+
+/* Sharing View */
+
+
+.author-row .remove {
+	visibility: hidden;
+	cursor: pointer;
+}
+.author-row:hover .remove {
+	visibility: inherit;
+}
