--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -244,10 +244,18 @@ h4:hover .object-id {
 /* Media */
 
 .thumbnail .caption {
+	padding-top: 0;
+	padding-bottom: 0;
+
 	p, div, h4 {
 		white-space: nowrap;
 		overflow: hidden;
 	}
+}
+
+.thumbnail.small img {
+	width: 96px;
+	height: 96px;
 }
 
 /* TODO temporarily unused, bootstrap used instead */
