--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -44,6 +44,9 @@ table th {
 .aris-nav li {
 	text-align: center;
 }
+.nav-name-wrapper {
+	display: inline-block;
+}
 @media (max-width: 767px) {
 	.aris-nav li {
 		text-align: left !important;
@@ -58,6 +61,8 @@ table th {
 @media (min-width: 881px) and (max-width: 960px) {
 	.nav-name {
 		font-size: 80%;
+	}
+	.nav-name-wrapper {
 		display: block;
 	}
 	body {
@@ -65,7 +70,7 @@ table th {
 	}
 }
 @media (min-width: 961px) and (max-width: 1100px) {
-	.nav-name {
+	.nav-name-wrapper {
 		display: block;
 	}
 	body {
