Remove padding from note thumbnail bottom

--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -434,6 +434,7 @@ h4:hover .object-id {
 }
 /* Notes View */
 .notes-editor .thumbnail {
+  margin: 0;
   margin-right: 10px;
 }
 .notes-editor .list-group-item {
