--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -490,6 +490,7 @@ h4:hover .object-id {
 /* Notes View */
 .notes-editor {
 	.thumbnail {
+		margin: 0;
 		margin-right: 10px;
 	}
 	.list-group-item {
