--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -475,14 +475,14 @@ h4:hover .object-id {
 }
 
 
-/* Sharing View */
+/* Deletable Lists */
 
 
-.author-row .remove {
+.list-group-item .remove {
 	visibility: hidden;
 	cursor: pointer;
 }
-.author-row:hover .remove {
+.list-group-item:hover .remove {
 	visibility: inherit;
 }
 
