--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -154,7 +154,6 @@ nav, .scene-panel, .script-panel, .script-option-panel, .media-editor .thumbnail
 	background: #f0f0f0;
 }
 
-
 .scenes-overlay {
 	.absolute;
 	z-index: 20;
@@ -163,11 +162,10 @@ nav, .scene-panel, .script-panel, .script-option-panel, .media-editor .thumbnail
 }
 
 .scene-panel {
-	max-width: 475px;
+	max-width: 100%;
 	float: left;
 
 	.scene-title {
-		max-width: 200px;
 		white-space: nowrap;
 		overflow: hidden;
 		font-size: 125%;
@@ -207,6 +205,12 @@ nav, .scene-panel, .script-panel, .script-option-panel, .media-editor .thumbnail
 .new-scene-button {
 	float: right;
 	z-index: 2;
+}
+
+.empty_scene {
+	border: 2px dotted rgb(200, 200, 200);
+	background: rgb(250, 250, 250);
+	padding: 0.5em;
 }
 
 
