--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -208,9 +208,8 @@ nav, .scene-panel, .script-panel, .script-option-panel, .media-editor .thumbnail
 }
 
 .empty_scene {
-	border: 2px dotted rgb(200, 200, 200);
-	background: rgb(250, 250, 250);
-	padding: 0.5em;
+	padding: 0 0.5em;
+	text-align: center;
 }
 
 
