--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -150,6 +150,7 @@ nav,
 .scene-panel {
   max-width: 100%;
   float: left;
+  margin: 0.5em;
 }
 .scene-panel .scene-title {
   white-space: nowrap;
@@ -158,7 +159,12 @@ nav,
   margin-right: 0.5em;
 }
 .scene-panel .new-trigger {
-  padding-top: 0.25em;
+  position: absolute;
+  right: 0;
+  top: 0px;
+  margin: 0.5em;
+  padding: 0.5em;
+  background: #f5f5f5;
 }
 .scene-triggers {
   margin-bottom: 0;
