--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -149,9 +149,15 @@ nav, .scene-panel, .script-panel, .script-option-panel, .media-editor .thumbnail
 	box-shadow: inset 0px 0px 10px rgba(0,0,0,0.2);
 }
 
-.scene-panel:hover .panel-heading {
-	color: #428bca;
-	background: #f0f0f0;
+.scene-panel:hover {
+	.panel-heading {
+		color: #428bca;
+		background: #ddd !important;
+	}
+	.new-trigger {
+		color: #428bca;
+		background: #ddd !important;
+	}
 }
 
 .scenes-overlay {
@@ -179,7 +185,7 @@ nav, .scene-panel, .script-panel, .script-option-panel, .media-editor .thumbnail
 		top: 0px;
 		margin: 0.5em;
 		padding: 0.5em;
-		background: #f5f5f5;
+		background: @panel-default-heading-bg;
 	}
 }
 
