--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -172,7 +172,10 @@ nav, .scene-panel, .script-panel, .script-option-panel, .media-editor .thumbnail
 	float: left;
 	margin: 0.5em;
 
+	color: #555;
+
 	.scene-title {
+		color: #777;
 		white-space: nowrap;
 		overflow: hidden;
 		font-size: 125%;
