--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -176,10 +176,11 @@ nav, .scene-panel, .script-panel, .script-option-panel, .media-editor .thumbnail
 
 	.scene-title {
 		color: #777;
-		white-space: nowrap;
+		white-space: pre;
 		overflow: hidden;
 		font-size: 125%;
 		margin-right: 0.5em;
+		padding-right: 1em;
 	}
 
 	.new-trigger {
