Tweak wording for infinite range. [#76452050]

--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -456,3 +456,7 @@ h4:hover .object-id {
 .notes-editor .list-group-item {
   padding: 10px;
 }
+/* Helpers */
+.addon-bg-info {
+  background: #d9edf7;
+}
