--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -378,14 +378,19 @@ h4:hover .object-id {
 
 /* Event Editor */
 .events-editor, .quest-editor, .media-editor, .object-editor, .games-list-container {
-	.padded, .event-table-header div, .event-table-header label {
+	.event-table-header div, .event-table-header label {
 		padding-right: 15px;
 		padding-left: 15px;
 	}
-	.padded-small {
-		padding-right: 5px;
-		padding-left: 5px;
-	}
+}
+
+.padded {
+	padding-right: 15px;
+	padding-left: 15px;
+}
+.padded-small {
+	padding-right: 5px;
+	padding-left: 5px;
 }
 
 /* Requirements Editor */
