--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -20,6 +20,10 @@ a {
 	padding-left: 1em !important;
 }
 
+.table-hover > tbody > tr:hover {
+  background-color: @navbar-default-toggle-hover-bg !important;
+}
+
 .table-hover .active td {
 	/*background: #d8d8d8 !important;*/
 }
@@ -152,11 +156,11 @@ nav, .scene-panel, .script-panel, .script-option-panel, .media-editor .thumbnail
 .scene-panel:hover {
 	.panel-heading {
 		color: #428bca;
-		background: #ddd !important;
+		background: @navbar-default-toggle-hover-bg !important;
 	}
 	.new-trigger {
 		color: #428bca;
-		background: #ddd !important;
+		background: @navbar-default-toggle-hover-bg !important;
 	}
 }
 
