Minor factory form revamp, make checkbox toggles work for factory produced trigger

--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -547,3 +547,8 @@ h4:hover .object-id {
 .well {
 	background: darken(@well-bg, 5%);
 }
+
+.form-inline {
+	margin-top: 5px;
+	margin-bottom: 5px;
+}
