Fix right side navbar padding

--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -552,3 +552,7 @@ h4:hover .object-id {
 	margin-top: 5px;
 	margin-bottom: 5px;
 }
+
+#user.navbar-right {
+	margin-right: 0; // Fix bootstrap 3.3 padding issue
+}
