Default media for dialog. Media picker shows selected and default. [#77656216]

--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -353,28 +353,11 @@ h4:hover .object-id {
 
 /* Media Selector */
 
-.media-chooser {
-	max-height: 600px;
-	overflow-x: hidden;
-	overflow-y: scroll;
+.thumbnail.choose.selected {
+	background: @brand-info;
 
-	.chooser-thumbnail {
-		display: inline-block;
-	}
-	.choose {
-		border: 2px solid rgba(0,0,0,0);
-		border-radius: 5px;
-		margin: 5px;
-		img {
-			border-radius: 5px;
-		}
-	}
-	.choose:hover {
-		border: 2px solid #999;
-		img {
-			opacity: 0.5;
-			cursor: pointer;
-		}
+	.caption {
+		color: #fff ;
 	}
 }
 
