--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -301,28 +301,11 @@ h4:hover .object-id {
   background: rgba(0, 0, 0, 0.25);
 }
 /* Media Selector */
-.media-chooser {
-  max-height: 600px;
-  overflow-x: hidden;
-  overflow-y: scroll;
+.thumbnail.choose.selected {
+  background: #5bc0de;
 }
-.media-chooser .chooser-thumbnail {
-  display: inline-block;
-}
-.media-chooser .choose {
-  border: 2px solid rgba(0, 0, 0, 0);
-  border-radius: 5px;
-  margin: 5px;
-}
-.media-chooser .choose img {
-  border-radius: 5px;
-}
-.media-chooser .choose:hover {
-  border: 2px solid #999;
-}
-.media-chooser .choose:hover img {
-  opacity: 0.5;
-  cursor: pointer;
+.thumbnail.choose.selected .caption {
+  color: #fff ;
 }
 .thumbnail {
   cursor: pointer;
