--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -282,6 +282,9 @@ h4:hover .object-id {
 
 
 /* Media */
+.thumbnail {
+	border: 1px solid rgba(0,0,0,0);
+}
 
 .thumbnail .caption {
 	padding-top: 0;
