--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -225,12 +225,16 @@ nav, .scene-panel, .script-panel, .script-option-panel, .media-editor .thumbnail
 		text-align: center;
 		white-space: nowrap;
 		padding-top: 5px;
+
+		.trigger-label {
+			overflow: hidden;
+		}
 	}
 
 	.scene-trigger:hover {
 		color: @brand-primary;
-		background: @gray-lighter;
-		border-radius: @border-radius-base;
+		//background: @gray-lighter;
+		//border-radius: @border-radius-base;
 	}
 }
 
