--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -418,7 +418,7 @@ h4:hover .object-id {
 }
 
 /* Scrolling for tall areas */
-.scenes, .media-editor, .media-editor .media-drop-target, .quests-editor, .conversation-editor, .conversations-editor, .games-list-container, .notes-editor  {
+.scenes, .media-editor, .media-editor .media-drop-target, .quests-editor, .conversation-editor, .conversations-editor, .games-list-container, .notes-editor, .tabs-editor {
 	height: 100%;
 	overflow-x: auto;
 }
