--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -389,7 +389,7 @@ h4:hover .object-id {
 	width: 128px;
 }
 
-.thumbnail:hover {
+.thumbnail.editor:hover, .thumbnail.choose:hover, .thumbnail.change-icon:hover, .thumbnail.change-media:hover  {
 	background: @gray-lighter;
 }
 
