Location triggers have default media logic. Storage for game objects. Image hover only on pickers. [#77656216]

--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -266,7 +266,7 @@ nav, .scene-panel, .script-panel, .script-option-panel, .media-editor .thumbnail
 .object-id {
 	visibility: hidden;
 }
-h4:hover .object-id {
+h5:hover .object-id, h4:hover .object-id {
 	visibility: visible;
 }
 
