--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -289,7 +289,7 @@ h5:hover .object-id, h4:hover .object-id {
 /* Narrow editor panels */
 
 .shrink-center {
-	width: 430px;
+	max-width: 430px;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 2em;
