--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -235,13 +235,13 @@ h4:hover .object-id {
 }
 /* Padded hover checks */
 .checkbox {
-  padding: 0.5em;
+  padding: 0;
   border-radius: 4px;
   background: #eee;
 }
 .checkbox label {
+  padding: 0.5em;
   width: 100%;
-  padding-left: 0;
   vertical-align: middle;
 }
 .checkbox input {
