--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -282,13 +282,13 @@ h5:hover .object-id, h4:hover .object-id {
 /* Padded hover checks */
 
 .checkbox {
-	padding: 0.5em;
+	padding: 0;
 	border-radius: @border-radius-base;
 	background: #eee;
 
 	label {
+		padding: 0.5em;
 		width: 100%;
-		padding-left: 0;
 		vertical-align: middle;
 	}
 
