--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -476,7 +476,7 @@ h5:hover .object-id, h4:hover .object-id {
 }
 
 /* Scrolling for tall areas */
-.scenes, .media-editor, .media-editor .media-drop-target, .quests-editor, .conversation-editor, .conversations-editor, .games-list-container, .notes-editor, .tabs-editor {
+.scenes, .media-editor, .media-editor .media-drop-target, .quests-editor, .conversation-editor, .conversations-editor, .games-list-container, .notes-editor, .tabs-editor, .scroll-area {
 	height: 100%;
 	overflow-x: auto;
 }
