Remove empty name field on notes. Truncate long notes in list

--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -16,6 +16,9 @@ body {
 a {
   cursor: pointer;
 }
+.clear {
+  clear: both;
+}
 /* Left Organizer */
 .organizer-section-header {
   color: #777777;
