--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -591,10 +591,10 @@ h5:hover .object-id, h4:hover .object-id {
 
 
 /* Notes View */
-.notes-editor {
+.notes-editor, .games-list-container {
 	.thumbnail {
 		margin: 0;
-		margin-right: 10px;
+		margin-left: 10px;
 	}
 	.list-group-item {
 		padding: 10px;
