--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -572,13 +572,22 @@ h4:hover .object-id {
   width: 10000px;
   /* Missing from bootstrap version */
 }
-.games-list-container .migration-badge {
+.games-list-container .migration_games .migration-badge {
   line-height: 1;
-  border-radius: 1em;
+  border-radius: 4px;
   min-width: 2em;
   padding: 0.5em;
   text-align: center;
   display: inline-block;
+}
+.games-list-container .migration_games .previously_migrated img {
+  opacity: 0.75;
+}
+.games-list-container .migration_games .previously_migrated .media-heading {
+  color: #959595;
+}
+.games-list-container .migration_games .previously_migrated .description {
+  color: #b7b7b7;
 }
 /* Tab drag and drop */
 .tab-drag-handle {
