--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -572,13 +572,26 @@ h4:hover .object-id {
   width: 10000px;
   /* Missing from bootstrap version */
 }
-.games-list-container .migration_games .migration-badge {
+.games-list-container .migration_games .migrated-badge {
   line-height: 1;
   border-radius: 4px;
   min-width: 2em;
   padding: 0.5em;
   text-align: center;
   display: inline-block;
+  color: #428bca;
+  background: #ffffff;
+  border: 1px solid #428bca;
+}
+.games-list-container .migration_games .migrating-badge {
+  line-height: 1;
+  border-radius: 4px;
+  min-width: 2em;
+  padding: 0.5em;
+  text-align: center;
+  display: inline-block;
+  background: #428bca;
+  color: #ffffff;
 }
 .games-list-container .migration_games .previously_migrated img {
   opacity: 0.75;
@@ -588,6 +601,64 @@ h4:hover .object-id {
 }
 .games-list-container .migration_games .previously_migrated .description {
   color: #b7b7b7;
+}
+@keyframes migrating-spin {
+  0% {
+    transform-origin: 100% 100%;
+    transform: rotate(0deg);
+  }
+  100% {
+    transform-origin: 100% 100%;
+    transform: rotate(360deg);
+  }
+}
+@-webkit-keyframes migrating-spin {
+  0% {
+    transform-origin: 100% 100%;
+    transform: rotate(0deg);
+  }
+  100% {
+    transform-origin: 100% 100%;
+    transform: rotate(360deg);
+  }
+}
+.migrating-spinner {
+  position: relative;
+  display: block;
+  z-index: 13;
+  margin: 15px auto;
+  width: 100px;
+  height: 100px;
+  border: 5px solid #d5d5d5;
+  border-radius: 50%;
+  background-color: #333333;
+}
+.migrating-spinner:before {
+  position: absolute;
+  display: block;
+  content: '';
+  z-index: 12;
+  top: 4px;
+  left: 4px;
+  width: 82px;
+  height: 82px;
+  border-radius: 50%;
+  background-color: #d5d5d5;
+}
+.migrating-spinner:after {
+  position: absolute;
+  display: block;
+  top: 0;
+  content: '';
+  z-index: 11;
+  top: 0px;
+  left: 0px;
+  width: 45px;
+  height: 45px;
+  border-radius: 200px 0 0 0;
+  background: linear-gradient(45deg, rgba(0, 0, 0, 0) 0%, #428bca 50%, #5bc0de 100%);
+  -webkit-animation: migrating-spin 1s linear infinite;
+  animation: migrating-spin 1s linear infinite;
 }
 /* Tab drag and drop */
 .tab-drag-handle {
@@ -609,4 +680,10 @@ h4:hover .object-id {
   visibility: visible !important;
   border: none;
   background: none;
+}
+/* Better contrast for radio button test */
+.btn-info.inverted {
+  color: #5bc0de;
+  background: #ffffff;
+  border: 1px solid #5bc0de;
 }
