Fix trigger type buttons rounding

--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -818,3 +818,9 @@ h5:hover .object-id, h4:hover .object-id {
 	background: @btn-info-color;
 	border: 1px solid @btn-info-bg;
 }
+
+
+/* Rounded corner for single button in trigger editor */
+.only_button {
+	border-radius: @border-radius-small !important;
+}
