--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -622,6 +622,7 @@ h4:hover .object-id {
     transform: rotate(360deg);
   }
 }
+/* Cool loading spinner, credit http://codepen.io/Erik/pen/cslHn */
 .migrating-spinner {
   position: relative;
   display: block;
@@ -629,7 +630,7 @@ h4:hover .object-id {
   margin: 15px auto;
   width: 100px;
   height: 100px;
-  border: 5px solid #d5d5d5;
+  border: 5px solid #c8c8c8;
   border-radius: 50%;
   background-color: #333333;
 }
@@ -643,7 +644,7 @@ h4:hover .object-id {
   width: 82px;
   height: 82px;
   border-radius: 50%;
-  background-color: #d5d5d5;
+  background-color: #c8c8c8;
 }
 .migrating-spinner:after {
   position: absolute;
@@ -686,4 +687,8 @@ h4:hover .object-id {
   color: #5bc0de;
   background: #ffffff;
   border: 1px solid #5bc0de;
+}
+/* Rounded corner for single button in trigger editor */
+.only_button {
+  border-radius: 3px !important;
 }
