Inference for items being given and taken

--- a/styles/arisjs.css
+++ b/styles/arisjs.css
@@ -717,3 +717,7 @@ h4:hover .object-id {
 .radio-images:last-child {
   margin-right: 0;
 }
+.inference_thumbnail {
+  display: inline-block;
+  margin-bottom: 1em;
+}
