--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -787,6 +787,12 @@ h5:hover .object-id, h4:hover .object-id {
 
 /* Tab drag and drop */
 
+.quests-editor, .tabs-editor {
+	.media {
+		margin-right: 1.5em;
+	}
+}
+
 .tab-drag-handle {
 	position: absolute;
 	top: 0;
