single branch make

--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -711,7 +711,7 @@ h5:hover .object-id, h4:hover .object-id {
 				opacity: 0.75;
 			}
 			.media-heading {
-				color: lighten(@gray, 25%);;
+				color: lighten(@gray, 25%);
 			}
 			.description {
 				color: lighten(@gray-light, 25%);
