Simpler display of login/logout QR codes

--- a/styles/arisjs.less
+++ b/styles/arisjs.less
@@ -342,9 +342,18 @@ h5:hover .object-id, h4:hover .object-id {
 
 /* QR code fit to side editor */
 
-.qr_image img {
+.qr_image img, .qr_image_locked img, .log_out_qr_image img {
 	padding-top: 1em;
 	width: 100%;
+}
+
+.qr_instructions {
+	text-align: center;
+	margin-top: 20px;
+}
+
+.locked_codes {
+	background-color: #ddd;
 }
 
 
